<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addcrafts.AddCraftsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_title_crafts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bg_form"
            android:hint="@string/ed_title"
            android:textColor="@color/brak_brown"
            android:textSize="16sp"
            android:inputType="text"
            android:fontFamily="@font/pt_sans"/>

        <EditText
            android:id="@+id/ed_desc_craft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_form"
            android:lines="5"
            android:maxLines="5"
            android:hint="@string/ed_desc"
            android:textColor="@color/brak_brown"
            android:textSize="16sp"
            android:fontFamily="@font/pt_sans"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_form">

            <Spinner
                android:id="@+id/spinner_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/category_array"
                android:textColor="@color/brak_brown" >

            </Spinner>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/tv_title_material_tool"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ed_tools"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/bg_form"
                android:hint="@string/ed_tools"
                android:textColor="@color/brak_brown"
                android:textSize="16sp"
                android:inputType="text"
                android:fontFamily="@font/pt_sans" />

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_materials_tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/btn_add_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_plus"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/tv_title_steps"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/ed_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_form"
            android:drawableEnd="@drawable/ic_delete"
            android:lines="2"
            android:maxLines="2"
            android:hint="@string/ed_steps"
            android:textColor="@color/brak_brown"
            android:textSize="16sp"
            android:fontFamily="@font/pt_sans"/>

        <LinearLayout
            android:id="@+id/linear_layout_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/btn_add_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_plus"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick" />

    </LinearLayout>
</ScrollView>