<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.explore.ExploreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="60dp"
            android:hint="@string/search_hint"
            android:background="@drawable/bg_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:iconifiedByDefault="false"
            app:searchHintIcon="@null" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_category"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito" />

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_category_organic"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/common_chalcedony"
                android:text="@string/tv_organic"
                android:textSize="12sp"
                android:fontFamily="@font/nunito"/>

            <Button
                android:id="@+id/btn_category_non_organic"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/common_chalcedony"
                android:text="@string/tv_non_organic"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_crafts"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            tools:ignore="NotSibling"
            tools:listitem="@layout/item_crafts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/brak_brown"
            app:srcCompat="@drawable/ic_add_camera"
            app:tint="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>